fix hyun set to be an intervals object

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,4 +9,5 @@ export(dualpathSvd2_YC)
 export(getDmat.from.adjmat)
 export(getadjmat.from.Dmat)
 export(graph2D_Dmat)
+export(test_gfl_approx)
 import(Matrix)
