--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(compute_CI)
 export(dual1d_Dmat)
 export(dualpathFused_CC_indexed)
 export(dualpathSvd2_YC)
+export(fusedlasso_inf)
 export(getDmat.from.adjmat)
 export(getadjmat.from.Dmat)
 export(graph2D_Dmat)
