first pass of software tutorials, additional functions to follow

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,4 +11,5 @@ export(fusedlasso_inf)
 export(getDmat.from.adjmat)
 export(getadjmat.from.Dmat)
 export(graph2D_Dmat)
+export(summary.fusedlasso_inf)
 import(Matrix)
