--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -2,6 +2,8 @@ pandoc: 2.11.2
 pkgdown: 1.6.1
 pkgdown_sha: ~
 articles:
+  Tutorials: Tutorials.html
+  real_data_example: real_data_example.html
   technical_details: technical_details.html
-last_built: 2021-06-20T23:37Z
+last_built: 2021-06-21T01:16Z
 
