first pass tutorial fix

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
 Package: GFLassoInference
-Title: Powerful Graph fused lasso Inference 
+Title: Powerful Graph Fused Lasso Inference 
 Version: 1.0
 Maintainer: Yiqun Chen <yiqunc@uw.edu>
 Author: Yiqun Chen
