--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,9 +1,9 @@
 Package: GFLassoInference
 Title: Powerful Graph Fused Lasso Inference 
 Version: 1.0
-Maintainer: Yiqun Chen <yiqunc@uw.edu>
+Maintainer: Yiqun T. Chen <yiqunc@uw.edu>
 Author: Yiqun Chen
-Authors@R: c(person("Yiqun", "Chen", email = "yiqunc@uw.edu",
+Authors@R: c(person("Yiqun T.", "Chen", email = "yiqunc@uw.edu",
                   role = c("aut", "cre")))
 Description: An implementation of powerful selective inference for graph fused lasso as described in Chen et al. (2021+)
 License: GPL-3
